--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -262,7 +262,7 @@ style.
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
-		gap 1.333em
+		gap 1em
 		margin-top 0.333em
 		&.post-body-with-background
 			background var(--c-tint-normal)
@@ -295,7 +295,8 @@ style.
 	.post-gallery-image-caption
 		font-size 12px
 		letter-spacing 0.333px
-		padding 1em
+		margin-top 1em
+		padding 0 1em
 	.post-header
 		align-items flex-start
 		display flex
