--- a/src/ui/component/feed/Feed.pug
+++ b/src/ui/component/feed/Feed.pug
@@ -23,6 +23,7 @@ script.
 	export sort = null
 	export subreddit_name = null
 	export time_range = null
+	export title = null
 	export type = null
 	export user_name = null
 
@@ -101,8 +102,10 @@ script.
 
 	load_next_page()
 
-ol.feed(class="feed-type-{type.split('_').at(-1)}")
-	{#if items.length > 0}
+{#if items.length > 0}
+	{#if title}
+		h1.feed-title {title}
+	ol.feed(class="feed-type-{type.split('_').at(-1)}")
 		{#each items as item, i (item)}
 			{#if filter !== 'unread' || !read[i]}
 				<!-- svelte-ignore a11y-no-noninteractive-element-interactions -->
@@ -114,32 +117,33 @@ ol.feed(class="feed-type-{type.split('_').at(-1)}")
 							Comment(id={item.id} out_of_context={true})
 						{:else}
 							Message(message={item})
+					{:else if type.endsWith('multireddits')}
+						FeedLink(multireddit_name={item.split('-')[1]} size='large' type='multireddit' user_name={item.split('-')[0]})
 					{:else if type.endsWith('posts')}
 						a.feed-post-link(href={format_url({ collection_id, feed_filter: filter, feed_search_sort: search_sort, feed_search_text: search_text, feed_sort: sort, feed_time_range: time_range === 'all' ? null : time_range, multireddit_name, post_id: item, subreddit_name, user_name })})
 							Post(expanded={false} id={item} out_of_context={type !== 'subreddit_posts'})
 					{:else if type.endsWith('subreddits')}
-						a(href={format_url({ subreddit_name: item })})
-							FeedLink(subreddit_name={item} type='subreddit')
+						FeedLink(size='large' subreddit_name={item} type='subreddit')
 					{:else if type === 'subreddit_wikipages'}
 						a(href={format_url({ subreddit_name, wikipage_name: item })}) {item.split('/').join(' / ')}
 		{#if type.endsWith('posts') && filter === 'unread' && read.length > 0}
 			Button(action={() => internal_navigate({ href: apply_query_parameters({ filter: 'all' }) })} text="Show {read.filter(x => x).length} read item{read.filter(x => x).length === 1 ? '' : 's'} ")
-	{#if has_next_page}
-		Label(text={error ? 'Error: ' + (error.reason || error.message) : ''})
-			Button(action={() => load_next_page()} loading={loading} text={error ? 'Retry' : 'Load more'})
-	{:else}
-		{#if loading}
-			.feed-loading Loading...
-		{:else if error}
-			Status(type='error' message="Error loading {type.split('_').at(-1)}.")
-		{:else if !(sort === 'search' && !search_text) && !has_next_page}
-			Status(type='warning' message="No {type.split('_').at(-1)}.")
+		{#if has_next_page}
+			Label(text={error ? 'Error: ' + (error.reason || error.message) : ''})
+				Button(action={() => load_next_page()} loading={loading} text={error ? 'Retry' : 'Load more'})
+{:else}
+	{#if loading}
+		.feed-loading Loading {type.split('_').at(-1)}...
+	{:else if error}
+		Status(type='error' message="Error loading {type.split('_').at(-1)}.")
+	{:else if !type.endsWith('reddits') && !(sort === 'search' && !search_text) && !has_next_page}
+		Status(type='warning' message="No {type.split('_').at(-1)}.")
 
 style.
 	.feed
 		display flex
 		flex-flow column nowrap
-		gap 1.333em
+		gap 1em
 		width 100%
 	.feed-items
 		display flex
@@ -147,10 +151,5 @@ style.
 		gap 0.666em
 	.feed-loading
 		color var(--c-text-weak)
-	.feed-post-link
-		background var(--c-tint-normal)
-		border-radius 1em
-		display block
-		padding 1em
 	.feed-read-count
 		color var(--c-text-weak)
